--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     width: 100vw;
     height: 100vh;
@@ -30,7 +34,11 @@ body{
     margin-bottom: 1.5vh;
     margin-left: 2vw;
  }
- 
+ .div-1{
+   
+    width: 100px;
+    height: 100px;
+ }
 
   @media screen and (min-width:0px) and (max-width:992px) {
     *{
@@ -50,5 +58,9 @@ body{
         display: flex;
         justify-content: center;
      }
-    
+     .div-1{
+        width: 100px;
+        height: 150px;
+        
+     }
 }
